fix: types, lint and format
